# mdbook-svgbob

./: .rustfmt.toml  Cargo.toml
.github/workflows/: release.yml
