[package]
name = "mdbook-svgbob"
version = "0.3.0"
authors = ["Alex Koz. <a@koz.email>"]
description = "SvgBob mdbook preprocessor which swaps code-blocks with neat SVG."
homepage = "https://nest.pijul.com/fzzr/mdbook-svgbob"
repository = "https://github.com/boozook/mdbook-svgbob.git"
keywords = ["mdbook", "markdown", "ascii", "svg", "bob"]
categories = ["command-line-utilities", "text-processing", "visualization"]

edition = "2021"

readme = "README.md"
license = "MPL-2.0"


[badges]
maintenance = { status = "passively-maintained" }


[dependencies]
mdbook = "0.4"
svgbob = "0.6"
svg = "0.13"

log = "0.4"
env_logger = "0.10"
semver = "1.0"

toml = "0.5"
serde_json = "1.0"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "10.0"

[dependencies.clap]
version = "4.0"
features = ["std", "derive", "cargo", "unicode", "error-context"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"
